@@ -3,7 +3,7 @@
  * XRDDEFAULT.C - Default external state retention routines for Nagios
  *
  * Copyright (c) 1999-2009 Ethan Galstad (egalstad@nagios.org)
- * Last Modified: 01-23-2009
+ * Last Modified: 05-13-2009
  *
  * License:
  *
@@ -382,8 +382,6 @@ int xrddefault_save_state_information(void){
 		fprintf(fp,"check_options=%d\n",temp_host->check_options);
 		fprintf(fp,"current_attempt=%d\n",temp_host->current_attempt);
 		fprintf(fp,"max_attempts=%d\n",temp_host->max_attempts);
-		fprintf(fp,"current_event_id=%lu\n",temp_host->current_event_id);
-		fprintf(fp,"last_event_id=%lu\n",temp_host->last_event_id);
 		fprintf(fp,"normal_check_interval=%f\n",temp_host->check_interval);
 		fprintf(fp,"retry_check_interval=%f\n",temp_host->check_interval);
 		fprintf(fp,"state_type=%d\n",temp_host->state_type);
@@ -449,8 +447,6 @@ int xrddefault_save_state_information(void){
 		fprintf(fp,"last_problem_id=%lu\n",temp_service->last_problem_id);
 		fprintf(fp,"current_attempt=%d\n",temp_service->current_attempt);
 		fprintf(fp,"max_attempts=%d\n",temp_service->max_attempts);
-		fprintf(fp,"current_event_id=%lu\n",temp_service->current_event_id);
-		fprintf(fp,"last_event_id=%lu\n",temp_service->last_event_id);
 		fprintf(fp,"normal_check_interval=%f\n",temp_service->check_interval);
 		fprintf(fp,"retry_check_interval=%f\n",temp_service->retry_interval);
 		fprintf(fp,"state_type=%d\n",temp_service->state_type);
